# qchem-simulation

./: README.md  electronic_optimization.py  main.py  nuclei_optimization.py  pyproject.toml  solve.py  utils.py
src/: electronic_optimization.py  nuclei_optimization.py
src/qchem_simulation/: electronic_optimization.py  main.py
tests/: test_electronic_optimization.py
